PaintController: Distinguish "all invalid" and "empty but valid"

Previously GraphicsLayer checked PaintController::CacheIsEmpty() (and
other conditions) to determine whether to repaint. However, sometimes
the cache is empty but is valid when the previous paint was empty, but
we painted unnecessarily.

Distinguish "empty but valid" from "all invalid".

Bug: 744665
Change-Id: I5080b83d4643b66061b6acfd8f805748c795620c