third_party/WebKit/Source/platform/graphics/GraphicsLayer.h
@@ -289,6 +289,7 @@ class PLATFORM_EXPORT GraphicsLayer : public cc::LayerClient,
 
   friend class CompositedLayerMappingTest;
   friend class PaintControllerPaintTestBase;
+  friend class GraphicsLayerTest;
 
  private:
   // WebContentLayerClient implementation.
